--- a/projects/lib-two/package.json
+++ b/projects/lib-two/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "lib-two",
-  "version": "0.0.1",
+  "name": "gopal612-lib-two",
+  "version": "1.1.1",
   "peerDependencies": {
     "@angular/common": "^12.2.0",
     "@angular/core": "^12.2.0"
